// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Layout component > Render empty list 1`] = `
<div>
  <div
    class="p-4"
  >
    <div>
      <h1
        class="pb-2 text-xl font-bold text-gray-900"
      >
        Select some nodes
      </h1>
    </div>
  </div>
</div>
`;

exports[`Layout component > Render list with content 1`] = `
<div>
  <div
    class="p-4"
  >
    <h1
      class="mb-2 border-b border-gray-200 pb-2 text-xl font-bold text-gray-900"
    >
      Selected nodes names
    </h1>
    <ul>
      <li
        class="border-b border-gray-200 py-2 text-sm font-medium text-gray-900 last:border-b-0"
      >
        Frame 1
      </li>
      <li
        class="border-b border-gray-200 py-2 text-sm font-medium text-gray-900 last:border-b-0"
      >
        Frame 2
      </li>
    </ul>
  </div>
</div>
`;
